# rust-sfizz

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  STATUS.md
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
fixtures/: README.md
sfizz/: Cargo.toml
sfizz-sys/: Cargo.toml  build.rs
sfizz-sys/src/: lib.rs
sfizz/src/: lib.rs
sfizz/tests/: taiko_render.rs
tests/: README.md
