[package]
name = "sfizz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe and ergonomic Rust wrapper around the sfizz SFZ synthesizer."
authors.workspace = true

[features]
default = ["vendored"]
vendored = ["sfizz-sys/vendored"]
system = ["sfizz-sys/system"]

[dependencies]
sfizz-sys = { path = "../sfizz-sys", default-features = false }
thiserror = "1"
